# scflow

./: bio.yml  pyproject.toml  setup.py
scflow/: __init__.py  class_scrna.py  constants.py  import_tools.py  setup.py
scflow/analysis/: __init__.py  pathway.py  perturbation.py  senescence.py
scflow/processing/: __init__.py  annotation.py  clustering.py  import_data.py  preprocessing.py
scflow/utils/: __init__.py  calculations.py  data_manipulation.py  gene_queries.py
scflow/visualization/: __init__.py  basic_plots.py
